[tool.poetry]
name = "Facebook.py"
version = "0.0.4"
description = ""
authors = ["MehdiRtal <mehdirtal7@pm.me>"]
packages = [{include = "facebook_py"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.2"
bs4 = "^0.0.1"
fake-useragent = "^1.4.0"
capmonster-python = "^2.4.1"
randomuser = "^1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
